cluster/demo-cluster/flux-system/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: flux-system
spec:
  targetNamespace: flux-system
  sourceRef:
    kind: GitRepository
    name: flux
  path: ./cluster/demo-cluster
  prune: true
  interval: 5m
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        ports: 
          - containerPort: 80
